public/errors/61
main.c:1:1: error: unknown type name ‘ww’
 ww
 ^
main.c:2:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
 ddd
 ^
